--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
         <div class='container about_me fade-in' id='about_me'>
             <h2>About Me</h2>
             <div id="small_bio">
-                <p> An Engineer, a Tech Enthusiast and a Web developer in making, who would love to work on a space where Technology and Art intersect.</p>
-                <p>I look forward to explore the potential of web as it matures itself to unclock applications beyond computers and smartphones.</p>
+                <p> An Engineer, a Tech Enthusiast and a Full Stack developer in making, who would love to work on a space where technology and art intersect.</p>
+                <p>When I was 10 years old, I put an entire dismantled CPU parts of an old computer back to working without any instructions or guide book. Although it never ran past the boot screen, but as a 10 year old that exhilarating feeling of fixing it back to work cannot be explained by mere words. I did learn a lesson that day- If you want to build something or solve a problem and you have no idea how to go about it, be bold enough to dive into it, you will eventually figure it out. Ever since then I have embraced to do things I have no idea about.</p>
+                <p>Web development happens to be  one of the fields where technology and art intersect. I am currently learning <a href='https://facebook.github.io/react/'>React</a> React and <a href='http://sass-lang.com/'>Sass</a> to complete certification on Data Visualization from FCC. And I look forward to explore web's full potential, as it matures itself to unlock applications beyond computers and smartphones.</p>
+                <p>If I am not coding, I would be on <a href='https://www.quora.com'>Quora</a> or <a href='https://www.medium.com'>Medium</a> reading. I am not sure if it counts, but I'll put it here anyway, I am pretty good at building recursive acronyms :).</p>
+                <br>
+                <p>You can can view my <a target=_blank href='https://www.freecodecamp.com/jasil1414/front-end-certification'> Official Front End Developer certificate</a> and solutions to <a target=_blank href='https://www.freecodecamp.com/jasil1414'> Algorithm challenges</a> at my FreeCodeCamp profile</p> 
+                
             </div>
         </div>
     </section>
@@ -118,7 +123,7 @@
                 </div>
                 <div class='col-xl-6 col-sm-6 col-xs-12 align_text'>
                     <br>
-                    <p>Remember the old game we used to play back in the school and college days when lecturer happened to be this ultra boring personality. Yeah, some of us called it 'X-O-X'(including me :)).
+                    <p>Remember the old game we used to play back in the school and college days when lecturer happened to be this ultra boring personality. Yeah, some of us called it 'X-O-X'(including me :)&nbsp).
                         <br> Play the game now!! And try to beat the computer.
                         <br>Did I mention that it's smart?? So make your moves wisely. </p>
                 </div>
@@ -190,7 +195,8 @@
 
     <section class='contact'>
         <div class='container contact_container contact_align  fade-in' id='contact_me'>
-            <h2>Contact Me</h2>
+            <div class='col-xs-9'><h2>Contact Me</h2></div>
+            <div class='col-xs-3 resume'><a href='doc/resume.pdf'><button class='resume_button'>Resume</button></a></div> 
             <div class='contact_rom'>
                 <ul class="social_contacts">
                     <li class='mail_to'>
