--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class='container contact_container contact_align  fade-in' id='contact_me'>
             <div class='col-xs-9'><h2>Contact Me</h2></div>
             <div class='col-xs-3 resume'><a href='doc/resume.pdf'><button class='resume_button'>Resume</button></a></div> 
-            <div class='contact_rom'>
+            <div class='col-xs-12 contact_rom'>
                 <ul class="social_contacts">
                     <li class='mail_to'>
                         <a target='_blank' href="mailto:jasiljazz@gmail.com"><img class='img-responsive' src="images/mail_to_black.png" alt="Linkedin">
