--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <section class='contact'>
         <div class='container contact_container contact_align  fade-in' id='contact_me'>
             <div class='col-xs-9'><h2>Contact Me</h2></div>
-            <div class='col-xs-3 resume'><a href='doc/resume.pdf'><button class='resume_button'>Resume</button></a></div> 
+            <div class='col-xs-3 resume'><a href='resume.pdf'><button class='resume_button'>Resume</button></a></div> 
             <div class='col-xs-12 contact_rom'>
                 <ul class="social_contacts">
                     <li class='mail_to'>
