--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@
                     <p>Get the local weather updates realtime.The website fetches data from Open Weather API and renders informations like current temperature, humidity, pressure etc. You can also toggle between celsius scale and faherenheit scale. </p>
                 </div>
             </div>
+            
+            <div class='col-xs-12 project_description fade-in odd_align'>
+                <h3>Low-Voltage Fully Programmable Membership Function Generator Circuit</h3>
+                <div class='col-xl-6 col-sm-6 col-xs-12  align_img'>
+                    <a target='_blank'><img src='images/Complete_circuit.jpg' class='img-responsive project_image' alt='p1'>
+                    </a>
+                </div>
+                <div class='col-xl-6 col-sm-6 col-xs-12 align_text'>
+                    <br>
+                    <p>My final year B.E project.
+                        <br> Today’s technology is binary having a crisp value, like 0 or 1, i.e. true or false, whereas in reality the world is analog. It is difficult for a human being to take decision when the things are uncertain (vague). And for certain systems, generating the mathematical model is very difficult. For such systems, the fuzzy logic can be used to make decisions and also in generating the models. Fuzzy logic is characterized by the membership function. The membership function gives the degree of belongingness. Normally, the Gaussian, trapezoidal, triangular and sigmoidal membership functions are used. In this proposed work, an attempt to generate membership function circuit using a bias voltage of 0.8 V with 180 nm technology using virtuoso is made.</p>
+                </div>
+            </div>
         </div>
     </section>
 
