--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class='col-xl-6 col-sm-6 col-xs-12 align_text'>
                     <br>
-                    <p>My final year B.E project.
+                    <p class="text-nowrap">My final year B.E project.
                         <br> Today’s technology is binary having a crisp value, like 0 or 1, i.e. true or false, whereas in reality the world is analog. It is difficult for a human being to take decision when the things are uncertain (vague). And for certain systems, generating the mathematical model is very difficult. For such systems, the fuzzy logic can be used to make decisions and also in generating the models. Fuzzy logic is characterized by the membership function. The membership function gives the degree of belongingness. Normally, the Gaussian, trapezoidal, triangular and sigmoidal membership functions are used. In this proposed work, an attempt to generate membership function circuit using a bias voltage of 0.8 V with 180 nm technology using virtuoso is made.</p>
                 </div>
             </div>
