--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             
             <div class='col-xs-12 project_description fade-in odd_align'>
                 <h3>Low-Voltage Fully Programmable Membership Function Generator Circuit</h3>
-                <div class='col-xl-6 col-sm-6 col-xs-12 pull-left  align_img'>
+                <div class='col-xl-6 col-sm-6 col-xs-12   align_img'>
                     <a target='_blank'><img src='images/Complete_circuit.jpg' class='img-responsive project_image' alt='p1'>
                     </a>
                 </div>
