--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 
 <head>
     <title>Jasil</title>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js'></script>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans|Raleway|Roboto|Work+Sans" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet'>
-    <link href="css/Normalize.css" rel='stylesheet'>
-    <link href='css/style.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans|Raleway|Roboto|Work+Sans" rel="stylesheet" async>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet' async>
+    <link href="css/Normalize.css" rel='stylesheet' async>
+    <link href='css/style.css' rel='stylesheet' async>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -234,7 +229,12 @@
         </div>
     </section>
 </body>
-<script type='text/javascript' src='scripts/script.js'></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous" async></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js' async></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js' async></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js' async></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js' async></script>
+    <script type='text/javascript' src='scripts/script.js' async></script>
 
 
 </html>
