--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <head>
     <title>Jasil</title>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans|Raleway|Roboto|Work+Sans" rel="stylesheet" async>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet' async>
-    <link href="css/Normalize.css" rel='stylesheet' async>
-    <link href='css/style.css' rel='stylesheet' async>
+    <link async href="https://fonts.googleapis.com/css?family=Comfortaa|Open+Sans|Raleway|Roboto|Work+Sans" rel="stylesheet" >
+    <link async href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel='stylesheet'>
+    <link async href="css/Normalize.css" rel='stylesheet'>
+    <link async href='css/style.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
