--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </a>
                         </li>
                         <li class='twitter'>
-                            <a target='_blank' href="https://twitter.com/jazeel1414/"><img class='img-responsive' src="images/twitter_black.png" alt="Twitter">
+                            <a target='_blank' href="https://twitter.com/jasil1414/"><img class='img-responsive' src="images/twitter_black.png" alt="Twitter">
                             </a>
                         </li>
                     </ul>
